# blackjack_trainer

./: .gitignore  .pylintrc  ANDROID_PLAN.md  CLAUDE.md  LICENSE  README.md  SWIFTUI_PLAN.md  blackjack_basic_strategy.md  blackjack_trainer_plan.md  main.py  precommit.sh  requirements.txt  stats.py  strategy.py  trainer.py  ui.py
.github/workflows/: ci.yml  cpp.yml  go.yml  python.yml  rust.yml
android/: gradle.properties  gradlew  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/gradle/: libs.versions.toml
bjst/: __init__.py  __main__.py  main.py  stats.py  strategy.py  trainer.py
cpp/: CLAUDE.md  CMakeLists.txt  README.md
cpp/include/: stats.h  strategy.h  trainer.h  ui.h
cpp/src/: main.cpp  stats.cpp  strategy.cpp  trainer.cpp  ui.cpp
cpp/tests/: test_hand_generation.cpp  test_stats.cpp  test_strategy.cpp
go/: CLAUDE.md  README.md  blackjack_trainer  go.mod  main.go
go/internal/stats/: stats.go  stats_test.go
go/internal/strategy/: strategy.go  strategy_test.go
go/internal/trainer/: trainer.go  trainer_test.go
go/internal/ui/: ui.go
rust/: CLAUDE.md  Cargo.toml  README.md
rust/src/: lib.rs  main.rs  stats.rs  strategy.rs  trainer.rs  ui.rs
rust/tests/: hand_generation_tests.rs  stats_tests.rs  strategy_tests.rs
swift/: .gitignore  ANIMATION_IMPLEMENTATION.md  Package.swift  README.md  create_xcode_project.sh
swift/BlackjackTrainer/BlackjackTrainer/: App.swift  Info.plist
swift/BlackjackTrainer/BlackjackTrainer.xcodeproj/: project.pbxproj
swift/BlackjackTrainer/BlackjackTrainer.xcodeproj/xcshareddata/xcschemes/: BlackjackTrainer.xcscheme
swift/BlackjackTrainer/BlackjackTrainer/Models/: GameModels.swift  Statistics.swift  StrategyChart.swift
swift/BlackjackTrainer/BlackjackTrainer/Services/: ScenarioGenerator.swift  StatisticsManager.swift
swift/BlackjackTrainer/BlackjackTrainer/ViewModels/: NavigationState.swift  TrainingSessionViewModel.swift
swift/BlackjackTrainer/BlackjackTrainer/Views/Components/: ActionButton.swift  CardView.swift  MenuItemView.swift
swift/BlackjackTrainer/BlackjackTrainer/Views/Guide/: StrategyGuideView.swift
swift/BlackjackTrainer/BlackjackTrainer/Views/Menu/: DealerGroupSelectionView.swift  HandTypeSelectionView.swift  MainMenuView.swift
swift/BlackjackTrainer/BlackjackTrainer/Views/Statistics/: SessionStatsView.swift  StatisticsView.swift
swift/BlackjackTrainer/BlackjackTrainer/Views/Training/: FeedbackDisplayView.swift  ScenarioDisplayView.swift  TrainingSessionView.swift
swift/Sources/BlackjackTrainer/Models/: Statistics.swift  StrategyChart.swift
swift/Sources/BlackjackTrainer/ViewModels/: NavigationState.swift
swift/Sources/BlackjackTrainer/Views/Guide/: StrategyGuideView.swift
swift/Sources/BlackjackTrainer/Views/Statistics/: SessionStatsView.swift
swift/Sources/BlackjackTrainerApp/: main.swift
swift/Tests/BlackjackTrainerTests/: GameModelTests.swift  ScenarioGeneratorTests.swift  StatisticsManagerTests.swift  StrategyChartTests.swift  TrainingSessionViewModelTests.swift
tests/: test_hand_generation.py  test_strategy.py
trainer/: __init__.py  __main__.py  main.py
web/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  test-strategy.js
web/src/: App.vue  style.css
web/src/components/: DealerGroupSelector.vue  FeedbackDisplay.vue  HandTypeSelector.vue  MainMenu.vue  PlayingCard.vue  StatisticsView.vue  TrainingSession.vue
web/src/types/: strategy.ts
web/src/utils/: statistics.ts  strategy.ts  trainingSessions.ts
(+42 files in other folders)
